Fix main image display title overflow

--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -332,8 +332,10 @@ $left-columns-width: 420px;
 				position: absolute;
 				bottom: 0px;
 				left: 0px;
+				box-sizing: border-box;
 				background-color: rgba(0, 0, 0, 0.3);
 				padding: 20px;
+				width: 100%;
 
 				h2 {
 					-webkit-line-clamp: 4;
